--- a/test_example.yml
+++ b/test_example.yml
@@ -13,7 +13,7 @@ on:
 env:
   # TODO: Change variable to your image's name.
   IMAGE_NAME: openefi_testing
-  PAT: "no tengo que ser tarado y pushear mi pat"
+  PAT: asdasdasdas
 
 jobs:
   # Run tests.
