--- a/.github/workflows/test_example.yml
+++ b/.github/workflows/test_example.yml
@@ -38,7 +38,14 @@ jobs:
       - name: Generate Report (HTML)
         run: |
           junit-viewer --results=./report.xml >> openefi_report.html
-      
+
+      - name: Publish Unit Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v1.7
+        if: always()
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          files: ./report.xml
+
       - uses: actions/upload-artifact@v2
         name: Upload firmware files
         with:
@@ -46,10 +53,3 @@ jobs:
           path: |
             openefi_report.html
             report.xml
-
-      - name: Publish Unit Test Results
-        uses: EnricoMi/publish-unit-test-result-action@v1.7
-        if: always()
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          files: report.xml
