change junit reporter

--- a/.github/workflows/test_example.yml
+++ b/.github/workflows/test_example.yml
@@ -39,12 +39,12 @@ jobs:
         run: |
           junit-viewer --results=./report.xml >> openefi_report.html
 
-      - name: Publish Unit Test Results
-        uses: EnricoMi/publish-unit-test-result-action@v1.7
+      - uses: IgnusG/jest-report-action@v2.3.3
+        name: Publish Unit Test Results
         if: always()
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          files: ./report.xml
+          access-token: ${{ secrets.GITHUB_TOKEN }}
+          junit-file: report.html
 
       - uses: actions/upload-artifact@v2
         name: Upload firmware files
