--- a/.github/workflows/test_example.yml
+++ b/.github/workflows/test_example.yml
@@ -39,15 +39,16 @@ jobs:
         run: |
           junit-viewer --results=./report.xml >> openefi_report.html
 
-      - uses: IgnusG/jest-report-action@v2.3.3
-        name: Publish Unit Test Results
+      - name: Publish Unit Test Results
+        uses: docker://ghcr.io/enricomi/publish-unit-test-result-action:latest
         if: always()
         with:
-          access-token: ${{ secrets.GITHUB_TOKEN }}
-          junit-file: report.xml
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          files: ./report.xml
 
       - uses: actions/upload-artifact@v2
         name: Upload firmware files
+        if: always()
         with:
           name: test reports
           path: |
