--- a/.github/workflows/test_example.yml
+++ b/.github/workflows/test_example.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v2
         with:
-          report_paths: 'example_report.xml'
+          report_paths: 'junit.xml'
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - uses: actions/upload-artifact@v2
