--- a/.github/workflows/test_example.yml
+++ b/.github/workflows/test_example.yml
@@ -37,12 +37,12 @@ jobs:
       
       - name: Generate Report (HTML)
         run: |
-          junit-viewer --results=./report.xml >> openefi_report.html
+          junit-viewer --results=./qemu_report.xml >> openefi_report.html
 
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v2
         with:
-          report_paths: 'example_report.xml'
+          report_paths: 'qemu_report.xml'
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - uses: actions/upload-artifact@v2
@@ -52,4 +52,4 @@ jobs:
           name: test reports
           path: |
             openefi_report.html
-            report.xml
+            qemu_report.xml
